# lstm_training

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: train_config.yaml
data/test/: dataset_15_adriano.pt
data/test/trial_1/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test/trial_2/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test/trial_3/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/: used_param.txt
data/test1/trial_1/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_10/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_11/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_12/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_13/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_14/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_15/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_16/: current_pose.csv  current_velocity.csv  human_wrench.csv  robot_ref_pos.csv
data/test1/trial_17/: current_pose.csv  (+3 more)
launch/: test.launch  test_2.launch
script/lstm_training/: bagpy_loader.py  dataframe_helper.py  dataset_tt.py  lstm_train.py  mylstm_project.py  param_loader.py  rename_bagfiles.py  rnn_lstm.py  tt_evaluation.py
(+64 files in other folders)
