<?xml version="1.0"?>
<package format="2">
  <name>lstm_training</name>
  <version>0.0.0</version>
  <description>The lstm_training package</description>

  <maintainer email="fabio@todo.todo">fabio</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
